--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,13 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title></title>  
+        <link rel="stylesheet" href="./index.css"/>      
+    </head>
+    <body>
+        <header></header>
+        <section class="main-content">
+        </section>
+        <footer></footer>
+    </body>
+</html>
