--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,18 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title></title>
+        <link rel="stylesheet" href="./index.css"/>
+    </head>
+    <body>
+        <section class="solid-box container">
+            <div class="purple-box box-contents"></div>
+            <div class="green-box box-contents"></div>
+            <div class="blue-circle box-contents"></div>
+        </section>
+        <section class="dotted-box container">
+            <div class="yellow-box box-contents"></div>
+        </section>
+        <section class="shadow-box container">HELLO <br> FRIENDS</section>
+    </body>
+</html>
