--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,20 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title></title>
+        <link rel="stylesheet" href="./index.css"/>
+    </head>
+    <body>
+        <header>
+            <div id="little-box"></div>
+        </header>
+        <section class="main-content">
+            <div class="info-text">        Consider hiding the status bar -- and all other app UI -- while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it ( and the appropriate app UI ) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.
+                </div>
+            <div class="colors" id="blue"></div>
+            <div class="colors" id="aqua"></div>
+            <div class="colors" id="green"></div>
+            <div class="colors" id="yellow"></div>
+        </section>
+    </body>
+</html>
